style: amend width of form and inputs for mobile to fix overlapping of phone number and email rows

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -318,6 +318,10 @@ nav {
     font-size: 1.75rem;
     margin-top: 1rem;
 }
+form {
+    width: 90%;
+    margin: 0 auto;
+}
 input:focus,
 select:focus,
 textarea:focus {
@@ -325,15 +329,12 @@ textarea:focus {
     outline-offset: 0px;
     outline: none;
 }
-#contact-form div {
-    margin-top: 10px;
-}
 #contact-form label {
     text-align: left;
 }
 #contact-form input{
-    width: 90%;
-    height: 2.25rem;
+    width: 100%;
+    height: 3rem;
     text-align: center;
     border: 0;
 }
@@ -352,14 +353,14 @@ button:hover {
     cursor: pointer;
 }
 #contact-form select {
-    width: 90%;
+    width: 100%;
     height: 4.75rem;
     text-align: center;
     font-size: 2rem;
     border: 0;
 }
 #contact-form textarea {
-    width: 90%;
+    width: 100%;
     border: 0;
 }
 
